# grideyeESP32

./: GAPI.hpp  GrideyeImpl.hpp  RootAPI.h  grideye.ino  grideyeImpl.hpp  platform.local.txt
HeatCam/HeatCam/: HeatCam.pde
lib/: OSCAPI.h  README  connectivity.hpp  time.hpp
lib/API/: API.conf.h  API.h  API.hpp  APIBase.h  APIInstance.h  APIMemberTypes.h  APISchema.h  APISerializer.h  Node.h  TypedArgs.h  Utils.h  legacy.h  log.h
test/: CMakeLists.txt  GEMock.h  test.cpp
